<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStart"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ivSource"
        />

    <ImageView
        android:id="@+id/ivSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pocetna"
        android:layout_below="@id/tvStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "40dp"
        android:contentDescription="@string/hint"
        />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStart"
        android:text="@string/btnExit"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>