<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaverActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/tvSaveScreenQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSSQuestion"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalScore"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvSaveScreenQuestion"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:textColorHighlight="@color/hintColor"
        />

    <Button
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:text="@string/btnYes"
        android:textColor="@color/black"
        android:layout_below="@+id/tvTotalScore"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/btnNo"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_toRightOf="@+id/btnYes"
        android:layout_below="@id/tvTotalScore"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        />

</RelativeLayout>