<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalScreen"
    android:padding="16dp"
    android:background="@color/backgroundColor"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="8dp"
        android:elevation="5dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvInput"
                android:textColor="@color/black"
                android:textSize="30sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor"
                    android:inputType="text"
                    android:autofillHints="@string/hint">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#747678"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/affirmative"
                >
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/cv"
        android:layout_marginTop="20dp"
        android:background="@color/table"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnStartNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/btnNewGame"
        android:layout_below="@+id/rvResults"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        >
    </Button>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/btnExit"
        android:layout_below="@+id/rvResults"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/btnStartNewGame"
        >
    </Button>


</RelativeLayout>